--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -239,6 +239,32 @@ input.form-control {
   overflow: auto;
 }
 
+.synthesis-list .line-point-safe-zone {
+  padding: 3px;
+}
+
+.synthesis-list .line-point,
+.synthesis-list .line-point-safe-zone {
+  width: var(--dl-xs-img-size);
+  height: var(--dl-xs-img-size);
+  min-width: var(--dl-xs-img-size);
+  min-height: var(--dl-xs-img-size);
+}
+
+.synthesis-list .sub-monsters .line-point,
+.synthesis-list .sub-monsters .line-point-safe-zone {
+  width: var(--dl-skin-img-size);
+  height: var(--dl-skin-img-size);
+  min-width: var(--dl-skin-img-size);
+  min-height: var(--dl-skin-img-size);
+}
+
+.synthesis-list .line-point .line-img,
+.synthesis-list .sub-monsters .line-point .line-img {
+  max-width: 100%;
+  max-height: 100%;
+}
+
 /* line */
 
 .line-filters {
@@ -1014,18 +1040,23 @@ a.dropdown-item.active {
 .rank {
   background-color: white;
   font-weight: bold;
-  color: black;
+  color: var(--bs-dark);
   padding: 0.05em 0.4em;
   align-self: flex-end;
   display: inline-block;
   margin-bottom: 1px;
+  border-radius: var(--bs-border-radius);
 }
 
-.monster-img .rank {
+.line-point .rank {
   position: absolute;
   right: 0;
   bottom: 0;
   margin: 0;
+  z-index: 3;
+  color: white;
+  background-color: var(--bs-primary);
+  border-radius: var(--bs-border-radius) 0 var(--bs-border-radius) 0;
 }
 
 /* Media */
