Update builder wiwth digimon lines version

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -417,7 +417,8 @@ a .spinner-grow {
 }
 
 .line-point {
-  transition: outline-color .3s, outline-width .3s;
+  transition: outline-color .3s, outline-width .3s, background-color .3s;
+  ;
 }
 
 a.line-point {
@@ -436,6 +437,11 @@ a.line-point {
 .line-point.editable:focus {
   background-color: rgba(255, 255, 255, 0.25);
   border-radius: var(--bs-border-radius);
+}
+
+.line-point.editable.pictured:hover,
+.line-point.editable.pictured:focus {
+  background-color: rgba(255, 255, 255, 0.5);
 }
 
 .line-point .absolute-legend {
@@ -658,7 +664,7 @@ a.line-point {
 
 .line-point .bi.uncollapse-point {
   top: 50%;
-  left: 75%;
+  left: 50%;
   transform: translate(-50%, -50%);
   opacity: 0;
   transition: all .3s;
@@ -723,6 +729,18 @@ a.line-point {
 
 .line-grid.editable {
   padding-top: 3em;
+}
+
+.line-grid.editable .line-point.editable::before {
+  content: '';
+  z-index: -3;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.3);
+  border-radius: var(--bs-border-radius);
 }
 
 .line-grid.editable .line-row {
@@ -805,21 +823,13 @@ a.line-point {
 }
 
 .line-grid .add-row>div {
-  height: calc((var(--dl-img-size) + 2rem) * 6 - 2rem);
+  height: calc(100% - 2rem);
   width: var(--dl-img-size);
   opacity: 0;
   border-radius: var(--bs-border-radius);
   transition: all .3s;
   padding-top: 1em;
   cursor: pointer;
-}
-
-.line-grid .add-row .size-7 {
-  height: calc((var(--dl-img-size) + 2rem) * 7 - 2rem);
-}
-
-.line-grid .add-row .size-8 {
-  height: calc((var(--dl-img-size) + 2rem) * 8 - 2rem);
 }
 
 .line-grid .add-row>div:hover {
