--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1154,6 +1154,16 @@ h3 {
   border: 3px solid rgba(0, 0, 0, 0.3);
 }
 
+.rank-title {
+  display: inline-block;
+  border-radius: var(--bs-border-radius);
+}
+
+.rank-title.active-outline {
+  padding: 0.1em 0.5em 0.2em;
+  margin: -0.1em 0 0.2em;
+}
+
 img.family {
   border-radius: var(--bs-border-radius);
 }
